# digitaldash-firmware-gen2

./: .cproject  .gitignore  .gitmodules  .mxproject  Bootloader + App Debug.launch  STM32U5G9ZJTXQ_FLASH.ld  digitaldash-firmware-gen2-stm32u5g Debug.launch  digitaldash-firmware-gen2-stm32u5g.ioc  ke_conf.h  lv_conf.h
Core/Inc/: dcache.h  dma2d.h  eeprom_24cw.h  fdcan.h  gpdma.h  gpu2d.h  hspi.h  i2c.h  icache.h  ke_config.h  ltdc.h  (+10 more)
scripts/: config.json  gen_boot_header.py  generate-settings.py  generate-template-config.py  output.json
ui/: CMakeLists.txt  alert.c  filelist.txt  themes.c  themes.h  ui.c  ui.h
ui/images/: ui_img_1255445637.c  ui_img_1255446660.c  ui_img_1255448710.c  ui_img_1282446777.c  ui_img_1282447800.c  ui_img_1303014416.c  ui_img_1303016466.c  ui_img_1303017489.c  ui_img_132358740.c  ui_img_132359763.c  ui_img_132361813.c  ui_img_1604142357.c  ui_img_1604144407.c  ui_img_1604145430.c  ui_img_1609092687.c  ui_img_1609093710.c  ui_img_1609095760.c  ui_img_200717598.c  ui_img_200718621.c  ui_img_527363508.c  ui_img_527364531.c  ui_img_527366581.c  ui_img_554362598.c  ui_img_554364648.c  ui_img_554365671.c  ui_img_881010558.c  ui_img_881011581.c  ui_img_881013631.c  ui_img_flare_png.c  ui_img_ford_performance_logo_png.c  ui_img_gauge125_png.c  ui_img_grumpy_png.c  ui_img_needle125_png.c  ui_img_oem_rs_gauge_png.c  ui_img_oem_st_gauge_png.c  ui_img_oem_strs_needle_png.c
ui/screens/: ui_Splash.c  ui_View1.c  ui_View2.c  ui_view1.c  ui_view2.c  ui_view3.c
ui/themes/: arc.c  digital.c  grumpy_cat.c  linear.c  radial.c  stock_st.c  stock_strs.c
(+23 files in other folders)
